# snlp

./: .gitattributes  .gitignore  LICENSE  README.md  REPRODUCTION.md  launch.sh  pyproject.toml
data/data/ml_superb/: README.md
data/data/ml_superb/ALFFA/amh/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/ALFFA/swa/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/ALFFA/wol/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/LAD/eng/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/LAD/gle/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/LAD/nld/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/LAD/rus/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/M-AILABS/deu/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/M-AILABS/eng/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/M-AILABS/fra/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/M-AILABS/ita/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/M-AILABS/pol/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  transcript_1h_train.txt
data/data/ml_superb/M-AILABS/rus/: transcript_10min_dev.txt  transcript_10min_test.txt  transcript_10min_train.txt  (+1 more)
models/espnet/espnet2/utils/: types.py
refs/: REPRODUCTION.md  idea.md  paper.md  rendu1.md  report.md
scripts/: download_mlsuperb_data.sh  patch_s3prl_for_ssl.py  run_ml_superb_baseline.sh  run_ml_superb_ssl_experiments.sh  test_mlsuperb_pipeline.sh  test_mlsuperb_stack.py
tests/: test_env.py
(+1022 files in other folders)
