[project]
name = "snlp"
version = "0.1.0"
description = "NLP speech recognition project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "jupyter>=1.1.1",
    "jupytext>=1.18.1",
    "matplotlib>=3.9.3",
    "numba>=0.61.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.3",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
    "scipy>=1.11.0,<1.15.0",
    "tach>=0.16.3",
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {snlp = "."} # you can write inside the brackets something like "Model1" = "models/model1/", "Model2" = "models/model2/"
packages = ["snlp"] # same, smth like ["Model1", "Model2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
